--- a/src/aniSpace.css
+++ b/src/aniSpace.css
@@ -1,12 +1,47 @@
-.aniSpaceInfo {
+/*/.aniSpaceInfo {
   margin-top: 20px;
   border-style: double;
   padding: 10px 30px 30px;
   line-height: 30px;
+}/*/
+
+/*/.aniSpace img {
+  box-shadow: 10px 10px 10px #100916e0;
+}/*/
+
+.aniSpace {
+  position: relative;
+  margin-bottom: 50px;
 }
 
 .aniSpace img {
+  object-fit: cover;
   box-shadow: 10px 10px 10px #100916e0;
 }
+
+.overlay {
+  position: absolute;
+  top: 0; left: 0; right: 0; bottom: 0;
+  text-align: center;
+  opacity: 0;
+  transition: opacity .25s;
+  background:  #0f0814;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 1em;
+  padding: 30px;
+  box-shadow: 10px 10px 10px #100916e0;
+}
+
+.overlay h1 {
+  margin-bottom: 0;
+}
+
+.aniSpace:hover .overlay {
+  opacity: 1;
+}
+
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Roboto+Mono&display=swap');
